test/functions/resolution/parenless-return-intent-overloaded-proc-this.good
parenless-return-intent-overloaded-proc-this.chpl:12: error: unresolved access of 'real(64)' by '()'
